# WebsiteDevelopment

./: README.md  index.html  package-lock.json
Website Development/: .gitignore  package.json
Website Development/Html/: blog.html  events.html  home.html  join.html  projects.html  team.html
Website Development/javascript/: join-script.js  script.js  team-style.js
Website Development/src/: index.css
Website Development/style/: join-style.css  style.css  team-style.css
WebsiteDevelopment/: package-lock.json  package.json
WebsiteDevelopment/backend/: cli.py  makefile  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
backend/database/: env.py
backend/database/seeders/: __init__.py  event_seeder.py  member_seeder.py  project_category_seeder.py  project_seeder.py
backend/database/seeders/fixtures/: members.json  projects.json
backend/database/versions/: 1f8e78c23301_create_members_migrations.py  3c3fb1d4fbad_create_members_table.py  5b8f8d30fdfc_create_projects_migrations.py  7aa60b9cb17a_create_projects_table.py  f28cc2d740d2_create_projects_table.py
backend/src/: main.py
backend/src/api/routers/: __init__.py  event_router.py  project_router.py
backend/src/api/schemas/: event_schema.py
backend/src/config/: __init__.py  database.py  settings.py
backend/src/models/: __init__.py  base.py  blog.py  campus.py  event.py  location.py  member.py  project.py  project_category.py  role.py
backend/src/utils/: __init__.py  session.py
src/: App.jsx  index.css
src/Styles/: Blog.css  (+5 more)
(+86 files in other folders)
